# PopTools

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  common.cpp  common.hpp  gpak.cpp  gpak.hpp  main.cpp  pakinterface.cpp  paktool.cpp  paktool.hpp  poppak.cpp  poppakgui.hpp  poptoolsgui.hpp  resourcetool.cpp  resourcetool.hpp  xmlparser.cpp  xmlparser.hpp
src/imgui/: imguimanager.cpp  imguimanager.hpp  paktoolwindow.hpp  resourcegenwindow.hpp
